# filehandling

./: README.md  pyproject.toml  readthedocs.yml  setup.py  test.py
docs/source/: conf.py  filehandling.rst  index.rst
filehandling/: __init__.py  tests.py
